[refactor]: fix several styling properties for better visualization and usability, including the way card components are displayed and also overlapping issues. Fixes #521

--- a/frontend/smarthome/src/css/SensorActuatorStyling.css
+++ b/frontend/smarthome/src/css/SensorActuatorStyling.css
@@ -1,5 +1,9 @@
 .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 20px;
+    padding-top: 64px
 }
 
 .header-row {
@@ -10,6 +14,7 @@
     background-color: #e0e0e0;
     padding: 10px;
     border: 1px solid #ddd;
+    width: 100%;
 }
 
 .title {
